pod_kubernetes.yml
apiVersion: v1
kind: Pod
metadata:
  name: python-microservice-pod
  namespace: tech.prod
spec:
  containers:
  - name: python-microservice
    image: your-docker-repo/python-microservice:latest
    ports:
    - containerPort: 5000
    resources:
    limits:
      memory: "3Gi"
    requests:
      memory: "2Gi"
