network_kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-prod
  namespace: tech.prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/16 # Asumiendo que esta seria la red interna "prod" es 10.0.0.0/16
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/16 # Asumiendo que esta seria la red interna "prod" es 10.0.0.0/16
